<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_account_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/create_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a Profile"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/white"
        android:shadowColor="@color/grey_violet"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/create_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        android:maxLines="1"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/create_profile_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/create_username_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_white_box"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="Username"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_name_text" />

    <TextView
        android:id="@+id/create_username_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/create_username_text"
        app:layout_constraintStart_toStartOf="@+id/create_username_text"
        android:layout_marginTop="4dp"
        />

    <EditText
        android:id="@+id/create_date_of_birth_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Date of Birth"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        android:maxLines="1"
        android:focusable="false"
        android:clickable="true"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/create_username_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/create_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/create_date_of_birth_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/create_user_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        android:maxLines="1"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/create_email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/repeat_user_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Repeat Password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_white_box"
        android:padding="12dp"
        android:maxLines="1"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/create_user_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvAddPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_add_photo"
        android:drawablePadding="8dp"
        android:text="Change Profile Picture"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/create_date_of_birth_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Create!"
        android:textColor="@color/grey_violet"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/repeat_user_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>