...
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnChat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnAllMoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#9FE2DD"
            android:text="All Moods"
            android:fontFamily="@font/poppins_regular"
...
